@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1390 2003/08/27 19:49:13 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.1391 2003/08/27 19:51:32 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-08-27 13:01 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/vm/hvm.c
+    + Added few missing HB_THREAD_STUB macros.
 
 2003-08-27 12:50 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/vm/hvm.c
